--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# Images and archives
+# Images, videos and archives
 *.jpg
-*.jpeg
-*.JPG
-*.JPEG
-*.gif
 *.gz
 *.dat
+*.3gp
